- Fixed open and close sidebar functions to move the body the correct amount - Fixed the stylings of the banner carousel. - Fixed the lineheight problem in the footer. - Removed the main scrollbar and added it to the body - Changed the open and close sidebar functions to move this body scrollbar.

--- a/scss_and_stylesheet/_footer.scss
+++ b/scss_and_stylesheet/_footer.scss
@@ -60,6 +60,7 @@
         width: 1143px;
         margin: auto;
         white-space: nowrap;
+        line-height: 20px;
 
         span {
             display: inline-block;
