--- a/scss_and_stylesheet/_navigation.scss
+++ b/scss_and_stylesheet/_navigation.scss
@@ -11,7 +11,7 @@
     align-items: flex-end;
     letter-spacing: 0.4px;
     position: fixed;
-    width: 100%;
+    width: calc(100% - 17px);
     z-index: 50;
     top: 120px;
     transition: top 0.2s ease-in-out;
