--- a/scss_and_stylesheet/_slider.scss
+++ b/scss_and_stylesheet/_slider.scss
@@ -16,3 +16,8 @@
         filter: grayscale(0);
     }
 }
+
+.img-container{
+    width: 100vw;
+}
+
