--- a/scss_and_stylesheet/style.scss
+++ b/scss_and_stylesheet/style.scss
@@ -28,6 +28,13 @@
 }
 
 html {
+    overflow: hidden;
+	height: 100%;
+}
+
+body {
+    overflow: auto;
+    height: 100%;
     overflow-x: hidden;
 }
 
